...
        textField.textAlignment = .center
        textField.font = .preferredFont(forTextStyle: .title2)
        textField.adjustsFontSizeToFitWidth = true
        textField.minimumFontSize = 12
        textField.autocorrectionType = .no
        textField.backgroundColor = .secondarySystemBackground
        textField.placeholder = "Enter a word here"
        textField.returnKeyType = .search
        textField.translatesAutoresizingMaskIntoConstraints = false
        
        return textField
    }()
    
...
        
        return tableView
    }()
    
    private let searchButton = WFButton(
        backgroundColor: .systemBlue,
        title: "Search",
        titleState: .normal,
        font: .preferredFont(forTextStyle: .headline),
        cornerRadius: 10,
        titleColor: .white,
        colorState: .normal
    )
...
