...
        adjustsFontSizeToFitWidth: true,
        minimumScaleFactor: 0.8,
        lineBreakMode: .byWordWrapping
    )
    
    private let exampleTitleLabel = WFLabel(
        text: "Example",
        textAlignment: .left,
        textColor: .label,
        font: .preferredFont(forTextStyle: .headline),
        backgroundColor: .clear
    )
    
...
